Se agrego el main y imagenes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,13 @@
 *{
 
 }
-body{
-    background-color: rgb(24, 24, 24);
+
+
+
+.main{
+    width: 600px;
+}
+
+#profile-img{
+    max-width: 60px;
 }
